# HSNPhira-v2-PMP-plugin

./: Cargo.toml  README.md
.github/workflows/: build.yml  bump-version.yml  release.yml
docs/: hsnphira-v2-migration.md
plugin/: Cargo.toml
plugin/src/: lib.rs
src/: lib.rs
wit/: phira-plugin.wit
