[package]
name = "hsnphira-v2-pmp-plugin"
version = "0.1.0"
edition = "2021"
description = "HSNPhira v2 Frontend Web API plugin for Phira-mp+"

[lib]
crate-type = ["cdylib"]

[dependencies]
phira-plugin-sdk = { path = "../phira-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WIT bindgen for guest (WASM component model)
wit-bindgen = { version = "0.58", optional = true }

[features]
default = ["wit-bindgen"]
